--- a/home.html
+++ b/home.html
@@ -3,13 +3,14 @@
 
 <head>
     <title>Blackjack!!!</title>
+    <link rel="icon" type="image/x-icon" href="./images-blackjack/icon-ace.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <div id="hometitle">
-        <h1>Web Project 1: Blackjack</h1>
+        <h1>Web Project 1: JRK  Blackjack</h1>
 
         <h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
     </div>
