--- a/summary.html
+++ b/summary.html
@@ -2,15 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="./images-blackjack/icon-ace.png" />
   <title>Summary</title>
-  <link rel="stylesheet" type="style/css" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div id="hometitle">
+    <h1>Web Project 1: JRK Blackjack</h1>
+
+    <h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+  </div>
   <div class="content">
+
+
     <div class="header-buttons">
       <!-- restart button -->
       <div class="static-buttons">
@@ -24,50 +29,59 @@
           <button>game-rules</button>
         </a>
       </div>
-
-
-    </div>
-
-    <div class="cards">
-
-      <div class="summary">
-        <dl>
-          <dt>
-            Leader
-          <dd>
-            Janis Grikstas
-          </dd>
-          </dt>
-          <dt>
-            Members
-          <dd>
-            Rafi
-          </dd>
-          <dd>Kush Darji</dd>
-          </dt>
-          <dt>
-            Project name
-          <dd>
-            ???
-          </dd>
-          </dt>
-          <dt>
-            Description
-          <dd>
-            Simple NON gambling legal casino style Black Jack card game
-          </dd>
-          </dt>
-          <dt>
-            responsability
-          <dd>
-
-          </dd>
-          </dt>
-        </dl>
+      <!-- add youtube link -->
+      <div class="static-buttons">
+        <a href="youtube url" target="_blank" rel="noopener noreferrer">
+          <button>youtube</button>
+        </a>
       </div>
+    </div>
+  </div>
+  <div class="cards">
+
+    <div class="description">
+      <dl>
+        <dt>
+          Leader
+        <dd>
+          Janis Grikstas
+        </dd>
+        </dt>
+        <dt>
+          Members
+        <dd>
+          Rafi
+        </dd>
+        <dd>Kush Darji</dd>
+        </dt>
+        <dt>
+          Project name
+        <dd>
+          JRK Blackjack
+        </dd>
+        </dt>
+        <dt>
+          Description
+        <dd>
+          Simple NON gambling legal casino style online Black Jack card game.
+          Simulates adoubled deck statistic based card game where a black jack is one hit away. Play against the
+          crafty dealer to win a game up to a $1000 credits
+        </dd>
+        </dt>
+        <dt>
+          responsability
+
+        <dd>
+          <img src="./images-blackjack/task.jpg" alt="tabel of tasks">
+        </dd>
+        </dt>
+      </dl>
     </div>
 
   </div>
+
+
+
 </body>
 
 </html>
