--- a/game-rule-popout.html
+++ b/game-rule-popout.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images-blackjack/icon-ace.png" />
     <title>game rule popout</title>
-    <link rel="stylesheet" type="style/css" href="style.css">
+    <link rel="stylesheet"  href="style.css">
 </head>
 
 <body>
-    <div class="content">
+
+    <div class="cards">
+
         <div class="description">
             <dl>
 
