--- a/playbutton.html
+++ b/playbutton.html
@@ -3,14 +3,17 @@
 
 <head>
     <title>Blackjack!!!</title>
+    <link rel="icon" type="image/x-icon" href="./images-blackjack/icon-ace.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Web Project 1: Blackjack</h1>
+    <div id="hometitle">
+		<h1>Web Project 1: JRK Blackjack</h1>
 
-    <h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+		<h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+	</div>
 
     <div id="cardtable">
         <div class="betdiv">
