--- a/shuffle.html
+++ b/shuffle.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div id="hometitle">
-		<h1>Web Project 1: Blackjack</h1>
+		<h1>Web Project 1: JRK Blackjack</h1>
 
 		<h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
 	</div>
