--- a/bet100.html
+++ b/bet100.html
@@ -9,10 +9,11 @@
 
 <body>
 
-    <h1>Web Project 1:  JRK  Blackjack</h1>
+    <div id="hometitle">
+		<h1>Web Project 1: JRK  Blackjack</h1>
 
-    <h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
-
+		<h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+	</div>
     <div id="cardtable">
         <div class="betamount">
             <h2>Bet Amount: $100</h2><br>
