--- a/bet500.html
+++ b/bet500.html
@@ -9,9 +9,11 @@
 
 <body>
 
-    <h1>Web Project 1: JRK  Blackjack</h1>
+    <div id="hometitle">
+		<h1>Web Project 1: JRK  Blackjack</h1>
 
-    <h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+		<h3>Rafi Rafi, Kush Darji, Janis Grikstas</h3>
+	</div>i Rafi, Kush Darji, Janis Grikstas</h3>
 
     <div id="cardtable">
         <div class="betamount">
