--- a/hit2.html
+++ b/hit2.html
@@ -39,7 +39,7 @@
 			</div>
 			<!-- add youtube link  -->
 			<div class="static-buttons">
-				<a href="youtube url" target="_blank" rel="noopener noreferrer">
+				<a href="https://youtu.be/VJ697SmDxhk" target="_blank" rel="noopener noreferrer">
 					<button>youtube</button>
 				</a>
 			</div>
