--- a/bet1000.html
+++ b/bet1000.html
@@ -24,7 +24,7 @@
     </div>
 
     <div id="links">
-        <a class="projectlink" href="youtube url">youtube</a>
+        <a class="projectlink" href="https://youtu.be/VJ697SmDxhk">youtube</a>
         <a class="projectlink" href="./summary.html" target="_blank" rel="noopener noreferrer">summary</a>
     </div>
 
