--- a/bet500.html
+++ b/bet500.html
@@ -24,7 +24,7 @@
     </div>
     <!-- youtube  -->
     <div id="links">
-        <a class="projectlink" href="youtube url">youtube</a>
+        <a class="projectlink" href="https://youtu.be/VJ697SmDxhk">youtube</a>
         <a class="projectlink" href="./summary.html" target="_blank" rel="noopener noreferrer">summary</a>
 
 </body>
