--- a/dealerwin.html
+++ b/dealerwin.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="static-buttons">
-        <a href="youtube url" target="_blank" rel="noopener noreferrer">
+        <a href="https://youtu.be/VJ697SmDxhk" target="_blank" rel="noopener noreferrer">
           <button>youtube</button>
         </a>
       </div>
