--- a/bet100.html
+++ b/bet100.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="links">
-        <a class="projectlink" href="https://youtu.be/VJ697SmDxhk">Youtube>></a>
+        <a class="projectlink" href="https://youtu.be/RDgS5OPgrjY">Youtube>></a>
         <a class="projectlink" href="summary.html">Summary>></a>
     </div>
 
