--- a/play.html
+++ b/play.html
@@ -39,7 +39,7 @@
 			</div>
 			<!-- youtube -->
 			<div class="static-buttons">
-				<a href="https://youtu.be/VJ697SmDxhk" target="_blank" rel="noopener noreferrer">
+				<a href="https://youtu.be/RDgS5OPgrjY" target="_blank" rel="noopener noreferrer">
 					<button>youtube</button>
 				</a>
 			</div>
