--- a/playerwin.html
+++ b/playerwin.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="static-buttons">
-        <a href="https://youtu.be/VJ697SmDxhk" target="_blank" rel="noopener noreferrer">
+        <a href="https://youtu.be/RDgS5OPgrjY" target="_blank" rel="noopener noreferrer">
           <button>youtube</button>
         </a>
       </div>
