--- a/playbutton.html
+++ b/playbutton.html
@@ -26,7 +26,7 @@
     </div>
     <!-- youtube  -->
     <div id="links">
-        <a class="projectlink" href="https://youtu.be/VJ697SmDxhk">youtube</a>
+        <a class="projectlink" href="https://youtu.be/RDgS5OPgrjY">youtube</a>
         <a class="projectlink" href="./summary.html" target="_blank" rel="noopener noreferrer">summary</a>
     </div>
 
