--- a/summary.html
+++ b/summary.html
@@ -31,7 +31,7 @@
       </div>
       <!-- add youtube link -->
       <div class="static-buttons">
-        <a href="https://youtu.be/VJ697SmDxhk" target="_blank" rel="noopener noreferrer">
+        <a href="https://youtu.be/RDgS5OPgrjY" target="_blank" rel="noopener noreferrer">
           <button>youtube</button>
         </a>
       </div>
